# examples

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: devcontainer.json
.github/actions/setup-node/: action.yml
.github/workflows/: ci.yml
apps/ai-image-generation/: .env.example  README.md  package.json  pnpm-lock.yaml
apps/ai-image-generation/app/: globals.css  layout.tsx  page.tsx
apps/ai-image-generation/components/: GeneratedImages.tsx  Header.tsx  ImageGenerator.tsx  WalletProvider.tsx
apps/ai-image-generation/hooks/: useGenerateImage.tsx  useSubmitCommitmentTransaction.tsx  useUploadImageToShelby.tsx
apps/ai-image-generation/utils/: client.ts
apps/cross-chain-accounts/: README.md  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/cross-chain-accounts/app/: layout.tsx  page.tsx
apps/cross-chain-accounts/components/: AccountBlobs.tsx  Header.tsx  (+2 more)
apps/download-blob/: .env.example  README.md  package.json
apps/list-blob/: .env.example  README.md  package.json  tsconfig.json
apps/solana/token-gated/anchor/programs/access_control/: Cargo.toml
apps/solana/token-gated/anchor/programs/access_control/src/: lib.rs
apps/solana/token-gated/anchor/programs/access_control/src/instructions/: mod.rs  purchase.rs  register_blob.rs
apps/solana/token-gated/anchor/programs/ace_hook/: Cargo.toml
apps/solana/token-gated/anchor/programs/ace_hook/src/: lib.rs
apps/upload-blob/: .env.example  README.md  package-lock.json  package.json
apps/web/: package.json  tsconfig.json
(+40 files in other folders)
